# datacon2025hack

./: .cursorrules  .gitignore  FINAL_REPORT.md  README.md  TODOs.md  analize_results.py  config.py  criteria.md  desirability_ranking.py  draw_molecules.py  gpu_monitoring.py  main.py  pyproject.toml  repostruct.md  req.txt  research.md  run.sh  simple_gpu_web.py  test_gpu_docking.py  test_optimized_gpu_docking.py  web_gpu_docking.py
.cursor/rules/: data-handling-and-preprocessing.mdc  general-python.mdc  model-evaluation-and-interpretation.mdc  polars_ds-models.mdc  pytorch-models.mdc  rdkit-usage.mdc  reproducibility-and-version-control.mdc  tauri-integration.mdc  testing-and-validation.mdc
data/processed/: CHEMBL2292_processed.parquet  CHEMBL3227_processed.parquet
data/raw/: CHEMBL2292_raw.parquet  CHEMBL3227_raw.parquet
step_01_target_selection/: run_target_analysis.py
step_02_activity_prediction/: calc_descriptors.py  data_collection.py  descriptor_calculator.py  feature_selection.py  generate_summary_report.py  model_utils.py  optuna_tune_xgb.py  padel_descriptors.py  predict_activity.py  run_descriptor_calc.py  run_prediction_model.py  train_activity_model.py  train_activity_model_scaffold.py  train_activity_model_xgb.py
step_02_activity_prediction/results/: activity_model.npz  activity_model_scaffold.npz  metrics.json  metrics_scaffold.json  metrics_xgb.json
step_03_molecule_generation/: char_rnn_generator.py  docking_guided_generator.py  dpo_finetuner.py  filter_and_score.py  graph_generator.py  optuna_tune_vae.py  pretrained_generator.py  rlhf_finetuner.py  run_finetuning.py  run_generation.py  selfies_vae_generator.py  transformer_vae_generator.py  validate_generated.py
step_03_molecule_generation/results/: char_rnn.pt  generated_molecules.parquet  generated_smiles_raw.txt
step_04_hit_selection/: accelerated_docking.py  gpu_vina_docking.py  ligand_prep.py  prepare_ligands.py  protein_prep.py  run_hit_selection.py  run_vina.py
step_04_hit_selection/docking/: docking_results.parquet  ligand_id_map.parquet  vina_scores.parquet
step_04_hit_selection/docking/ligands/: lig_0.pdbqt  lig_0_dock.pdbqt  lig_1.pdbqt  lig_10.pdbqt  lig_100.pdbqt  lig_100_dock.pdbqt  lig_101.pdbqt  lig_101_dock.pdbqt  lig_102.pdbqt  lig_102_dock.pdbqt  lig_103.pdbqt  lig_103_dock.pdbqt  lig_104.pdbqt  lig_104_dock.pdbqt  lig_105.pdbqt  lig_105_dock.pdbqt  lig_106.pdbqt  lig_106_dock.pdbqt  lig_107.pdbqt  lig_107_dock.pdbqt  lig_108.pdbqt  lig_108_dock.pdbqt  lig_109.pdbqt  lig_109_dock.pdbqt  lig_10_dock.pdbqt  lig_11.pdbqt  lig_110.pdbqt  lig_110_dock.pdbqt  lig_111.pdbqt  lig_111_dock.pdbqt  lig_112.pdbqt  lig_112_dock.pdbqt  lig_113.pdbqt  (+1585 more)
step_04_hit_selection/results/: final_hits.parquet  top5_compounds.csv  top5_desirability_ranked.parquet  top5_ranked.parquet
utils/: get_box_center.py  logger.py  sascore.py
(+3 files in other folders)
